src/parser/test/esprima/invalid-syntax/strict_assignment_implements.js
function hello() { "use strict"; implements = 1; }
